# GarminSync

./: .env.example  .gitignore  README.md  requirements.txt
backend/: __init__.py  app.py
backend/core/: __init__.py  config.py  create_db.py  garmin_client.py  log_config.py  logging_utils.py
backend/data/: __init__.py  sync.py
backend/data/fetchers/: __init__.py  activity_fetcher.py  health_fetcher.py  sleep_fetcher.py
backend/data/processors/: __init__.py  activity_processor.py  health_processor.py  sleep_processor.py
backend/models/: __init__.py  models.py
backend/routes/: __init__.py  activity_route.py  health_route.py  sleep_route.py
backend/utils/: __init__.py  data_utils.py  db_util.py  time_utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/videos/: activity_bg.webm  landing_bg.webm
frontend/src/: index.js
frontend/src/app/: App.css  App.js  theme.js
frontend/src/hooks/: useScrollPosition.js  useVideoPreloader.js
frontend/src/styles/: _animation.css  _base.css  _loading.css  _mixins.css  _reset.css  _variables.css  main.css
garmindb/: .gitattributes  .gitignore  GarminConnectConfig.json.example  Makefile  defines.mk  pyproject.toml  setup.py
garmindb/.github/workflows/: azure-static-web-apps-lively-sea-0c375ba10.yml
garmindb/db-config/: staticwebapp.database.config.json
garmindb/mshealthdb/: import_csv.py
garmindb/src/: app.py  config.py  data_fetcher.py  garmin_client.py  models.py  requirements.txt  routes.py
garmindb/src/static/: styles.css
garmindb/src/templates/: index.html
(+45 files in other folders)
